# yacob

./: .gitignore  CANOPEN_PRIMER.md  CLAUDE.md  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
_Tasks/: additional-sdo-servers.md  api-evaluation.md  application-models.md  conformance-matrix.md  example-use-cases.md  known-issues.md  master-application-model.md  od-events-spec.md  timing-characterization.md  zencan-comparison.md
canopen-core/: Cargo.toml
canopen-core/src/: bus.rs  can_router.rs  cobid.rs  datatypes.rs  dcf.rs  emcy.rs  events.rs  heartbeat.rs  lib.rs  lss.rs  nmt.rs  node.rs  od.rs  slcan.rs  sync.rs  time.rs  transport.rs
canopen-core/src/pdo/: engine.rs  mod.rs
canopen-core/src/sdo/: client.rs  driver.rs  mod.rs  protocol.rs  server.rs
canopen-core/src/slcan/: logic.rs  mod.rs  serial.rs
canopen-core/tests/: eds_test.rs  frost_eds_test.rs  macro_test.rs  sdo_client_test.rs  test_bool_mapped_as_u8.eds  test_device.eds  test_dummy_mapping.eds  test_pdo_device.eds  test_sdo_client_names.eds
canopen-derive/: Cargo.toml
canopen-derive/src/: codegen.rs  dsl.rs  eds_export.rs  eds_parser.rs  lib.rs  sdo_client_codegen.rs
canopen-linux/: Cargo.toml
canopen-linux/examples/: async_master.rs  firmware_upload.rs  sensor_hub.rs  slcan_blink.rs  slcan_gpio_test.rs  slcan_listen.rs  slcan_setup.rs  vcan_client.rs  vcan_node.rs
canopen-linux/src/: lib.rs  sdo_helpers.rs  slcan.rs  socketcan_transport.rs  udp_multicast.rs  websocket_transport.rs
canopen-web/: Cargo.toml
canopen-web/src/: lib.rs
canopen-web/src/transport/: canwsd.rs  mod.rs  slcan.rs
canwsd-proto/: Cargo.toml
canwsd-proto/src/: filter.rs  lib.rs  wire.rs
examples/canopen-egui/: Cargo.toml  build-wasm.sh  index.html
examples/canopen-egui/src/: app.rs  can_bus.rs  lib.rs  main.rs
examples/stm32-fwupdate/: Cargo.toml  build.rs  memory.x
examples/stm32-fwupdate/.cargo/: config.toml
examples/stm32-fwupdate/src/: main.rs
examples/stm32-node/: Cargo.toml
examples/stm32-node/src/: main.rs
hil-tests/: Cargo.toml  README.md
hil-tests/src/: lib.rs
hil-tests/tests/: hil.rs
interop-tests/: README.md  conftest.py  loopback_mcast.py  pyproject.toml  test_canopen.py  vcan_node.eds
tools/canwsd/: CLAUDE.md  Cargo.toml
tools/canwsd-dump/: CLAUDE.md  Cargo.toml
tools/canwsd-dump/src/: format.rs  main.rs
tools/canwsd/src/: bridge.rs  main.rs  socketcan_wire.rs
