[workspace]
resolver = "2"
members = [
    "canopen-core",
    "canopen-derive",
    "canopen-linux",
    "canopen-web",
    "canwsd-proto",
    "examples/canopen-egui",
    "hil-tests",
    "tools/canwsd",
]
exclude = [
    "examples/stm32-node",
    "examples/stm32-fwupdate",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
