[package]
name = "canopen-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CANopen protocol stack for embedded systems"

[features]
default = []
alloc = []
std = ["critical-section/std", "alloc"]
defmt = ["dep:defmt"]
embassy = ["dep:embassy-sync", "dep:embassy-time"]

[dependencies]
embedded-can = "0.4"
heapless = "0.9"
critical-section = "1.2"
defmt = { version = "1.0", optional = true }
embassy-sync = { version = "0.8", default-features = false, optional = true }
nb = "1.1.0"
embassy-time = { version = "0.5.1", default-features = false, optional = true }

[dev-dependencies]
canopen-derive = { path = "../canopen-derive" }
critical-section = { version = "1.2", features = ["std"] }
miniz_oxide = "0.9.1"
