[package]
name = "canopen-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Proc macros for CANopen object dictionary definition"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
miniz_oxide = { version = "0.9.1", features = ["with-alloc"] }
