[package]
name = "canopen-linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Linux socketcan transport and utilities for canopen-rs"

[dependencies]
canopen-core = { path = "../canopen-core", features = ["std"] }
canopen-derive = { path = "../canopen-derive" }
socketcan = "3.5"
embedded-can = "0.4"
libc = "0.2"

[dev-dependencies]
