[package]
name = "canwsd-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared canwsd interface definition: WebSocket wire format, CAN filters, and API types"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = ["alloc", "serde?/std"]
alloc = ["serde?/alloc"]
serde = ["dep:serde"]
