[package]
name = "hil-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hardware-in-the-loop tests for canopen-rs"

[[test]]
name = "hil"
harness = true

[dependencies]
canopen-core = { path = "../canopen-core", features = ["std"] }
canopen-derive = { path = "../canopen-derive" }
canopen-linux = { path = "../canopen-linux" }

[dev-dependencies]
