[package]
name = "stm32-canopen-node"
version = "0.1.0"
edition = "2021"

[dependencies]
canopen-core = { path = "../../canopen-core" }
canopen-derive = { path = "../../canopen-derive" }

embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.4", features = ["stm32g431kb", "time-driver-any", "exti"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
embassy-sync = { version = "0.6" }

embedded-can = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
opt-level = "s"
lto = true
