[package]
name = "canwsd-dump"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
canwsd-proto = { version = "0.1.0", path = "../../canwsd-proto" }
chrono = "0.4.45"
clap = { version = "4.6.3", features = ["derive"] }
futures-util = "0.3.33"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
